Improved performance and fixed PopTop bug